<resources>
    <string name="license_info">License Info</string>
    <string name="license">License</string>
    <string name="app_license">Application License</string>
    <string name="eula_text">&lt;b>This application is distributed and created under the GNU GPL v3 license.&lt;/b>&lt;br/>&lt;br/>This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.&lt;br/>&lt;br/>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.&lt;br/>&lt;br/>You should have received a copy of the GNU General Public License along with this program. If not, see &lt;a href=http://www.gnu.org/licenses/>http://www.gnu.org/licenses/&lt;/a>.&lt;br/>&lt;br/></string>
    <string name="app_name">BabyCareTimer</string>
    <string name="app_name_formatted_version">Baby Care Timer v%s</string>
    <string name="app_name_formatted">Baby Care Timer</string>
    <string name="app_settings_text">Settings</string>
    <string name="about_text">About</string>
    <string name="ok_text">Ok</string>
    <string name="close_text">Close</string>
    <string name="feedback_text">Feedback</string>
    <string name="basic_settings_text">Basic Settings</string>
    <string name="advanced_settings_text">Advanced Settings</string>
    <string name="cancel_text">Cancel</string>
    <string name="reset_text">Reset</string>
    <string name="restart_timer_text">Restart Timer</string>
    <string name="stop_timer_text">Stop Timer</string>
    <string name="diaper_total_text">Diaper Change Total</string>
    <string name="bottle_total_text">Bottle Total</string>
    <string name="sleep_total_text">Sleep Total</string>
    <string name="custom_total_text">Custom Total</string>
    <string name="reset_counter_text">Reset Counter</string>
    <string name="alarm_settings_text">Alarm Settings</string>
    <string name="reset_counters_text">Reset Counters</string>
    <string name="reset_counters_dialog_text">This will reset all the counters back to 0</string>
    <string name="reset_counter_diaper_dialog_text">This will reset the Diaper Change counter back to 0</string>
    <string name="reset_counter_bottle_dialog_text">This will reset the Bottle counter back to 0</string>
    <string name="reset_counter_sleep_dialog_text">This will reset the Sleep counter back to 0</string>
    <string name="reset_counter_custom_dialog_text">This will reset the Custom counter back to 0</string>
    <string name="snooze_text">Snooze</string>
    <string name="dismiss_text">Dismiss</string>
    <string name="recurring_text">Recurring</string>
    <string name="set_alarm_text">Set Alarm</string>
    <string name="cancel_alarm_text">Cancel Alarm</string>
    <string name="alarm_has_been_set_text">Alarm has been set and will alert you when the timer reaches %1$s hours and %2$s minutes.</string>
    <string name="alarm_error_zero_text">A time value greater than 0 must be entered before an alarm can be set.</string>
    <string name="alarm_text">Alarm</string>
    <string name="preference_app_theme_title">Application Theme</string>
    <string name="preference_app_theme_summary">Choose the theme for this application.</string>
    <string name="preference_haptic_feedback_title">Enable Haptic Feedback</string>
    <string name="preference_haptic_feedback_summaryOn">Haptic Feedback is enabled. Vibrate when pressing soft keys and on certain UI interactions.</string>
    <string name="preference_haptic_feedback_summaryOff">Haptic Feedback is disabled.</string>
    <string name="preference_display_seconds_enabled_title">Display Timer Seconds</string>
    <string name="preference_display_seconds_enabled_summaryOn">Seconds will be displayed in each of the timers on the screen.</string>
    <string name="preference_display_seconds_enabled_summaryOff">Seconds will not be displayed in each of the timers on the screen.</string>
    <string name="preference_blink_colon_enabled_title">Blink Timer Indicator</string>
    <string name="preference_blink_colon_enabled_summaryOn">"The ':' character will blink every second to let you know that the counter is running."</string>
    <string name="preference_blink_colon_enabled_summaryOff">"The ':' character will not blink."</string>
    <string name="preference_landscape_screen_enabled_title">Enable Landscape Screen</string>
    <string name="preference_landscape_screen_enabled_summaryOn">The screens will rotate to landscape mode when the phone is rotated.</string>
    <string name="preference_landscape_screen_enabled_summaryOff">The screens will not rotate to landscape mode when the phone is rotated.</string>
    <string name="preference_confirm_reset_counters_enabled_title">Confirm Reseting Counters</string>
    <string name="preference_confirm_reset_counters_enabled_summaryOn">A confirmation dialog box will be displayed.</string>
    <string name="preference_confirm_reset_counters_enabled_summaryOff">A confirmation dialog box will not be displayed.</string>
    <string name="preference_about_summary">About Baby Care Timer</string>
    <string name="rate_app_text">Rate App</string>
    <string name="rate_app_summary">Rate this application.</string>
    <string name="email_developer_text">Email Developer</string>
    <string name="email_developer_summary">Send an email to the developer to give feedback about this application.</string>
    <string name="preference_export_preferences_title">Export Preferences</string>
    <string name="preference_export_preferences_summary">Export this applications preferences to your SD card.</string>
    <string name="preference_import_preferences_title">Import Preferences</string>
    <string name="preference_import_preferences_summary">"Import application preferences from the SD card.
The preference screens will reload once the import has completed."</string>
    <string name="preference_alarm_max_hours_title">Maximum Hours For Alarms</string>
    <string name="preference_alarm_max_hours_summary">Choose the maximum number of hours for alarms.</string>
    <string name="preference_snooze_amount_title">Snooze Duration</string>
    <string name="preference_snooze_amount_summary">Set the snooze duration.</string>
    <string name="preference_screen_settings">Screen Settings</string>
    <string name="preference_screen_enabled_title">Turn Screen On</string>
    <string name="preference_screen_enabled_summaryOn">The screen will turn on for an alarm.</string>
    <string name="preference_screen_enabled_summaryOff">Screen will not turn on for an alarm.</string>
    <string name="preference_screen_dim_enabled_title">Dim Screen</string>
    <string name="preference_screen_dim_enabled_summaryOn">Dim screen when it turns on (saves battery power).</string>
    <string name="preference_screen_dim_enabled_summaryOff">Screen will not dim.</string>
    <string name="preference_keyguard_enabled_title">Unlock Phone</string>
    <string name="preference_keyguard_enabled_summaryOn">Unlock phone for an alarm.</string>
    <string name="preference_keyguard_enabled_summaryOff">Do not unlock phone for an alarm.</string>
    <string name="preference_blur_screen_background_enabled_title">Blur Screen Background</string>
    <string name="preference_blur_screen_background_enabled_summaryOn">The background of the screen will blur when an alarm is shown.</string>
    <string name="preference_blur_screen_background_enabled_summaryOff">The background of the screen will not blur when an alarm is shown.</string>
    <string name="preference_dim_screen_background_enabled_title">Dim Screen Background</string>
    <string name="preference_dim_screen_background_enabled_summaryOn">The background of the screen will dim when an alarm is shown.</string>
    <string name="preference_dim_screen_background_enabled_summaryOff">The background of the screen will not dim when an alarm is shown.</string>
    <string name="preference_dim_screen_background_amount_title">Dim Screen Value</string>
    <string name="preference_dim_screen_background_amount_summary">Define how dim you want the background screen to get. (0 = no dimming, 100 = black)</string>
    <string name="preference_screen_timeout">Screen Timeout</string>
    <string name="preference_screen_timeout_summary">Define how long to wait before releasing the phones screen after a notification is shown. The smaller the timeout, the less battery power is used.</string>
    <string name="preference_notifications_enabled_title">Enable Status Bar Notifications</string>
    <string name="preference_notifications_enabled_summaryOn">Status Bar Notifications will be shown for alarms.</string>
    <string name="preference_notifications_enabled_summaryOff">Status Bar Notifications will not be shown for alarms.</string>
    <string name="preference_notification_settings">Notification Settings</string>
    <string name="preference_notification_settings_summary">Customize Status Bar Notifications</string>
    <string name="preference_notification_sound_settings_text">Notification Sound Settings</string>
    <string name="preference_notification_sound_title">Notification Sound</string>
    <string name="preference_notification_sound_summary">Select the sound that will play when a notification is displayed.</string>
    <string name="preference_notification_vibrate_settings_text">Notification Vibration Settings</string>
    <string name="preference_vibrate_setting_title">Vibrate Setting</string>
    <string name="preference_vibrate_setting_summary">Select the vibrate setting for notifications.</string>
    <string name="preference_vibrate_pattern_title">Vibrate Pattern</string>
    <string name="preference_vibrate_pattern_summary">Set the vibration pattern.</string>
    <string name="preference_notification_led_settings_text">Notification LED Setting</string>
    <string name="preference_led_enabled_title">Enable LED</string>
    <string name="preference_led_enabled_summaryOn">Notifications will blink the LED light.</string>
    <string name="preference_led_enabled_summaryOff">Notifications will not blink the LED light.</string>
    <string name="preference_led_pattern_title">LED Blink Settings</string>
    <string name="preference_led_pattern_summary">Set the LED blink rate.</string>
    <string name="preference_led_pattern_dialog">Enter the time in milliseconds to turn the LED on and off.</string>
    <string name="preference_led_pattern_on">Time On:</string>
    <string name="preference_led_pattern_off">Time Off:</string>
    <string name="preference_led_color_title">LED Color Settings</string>
    <string name="preference_led_color_summary">Set the LED color.</string>
    <string name="preference_led_color_red">Red:</string>
    <string name="preference_led_color_green">Green:</string>
    <string name="preference_led_color_blue">Blue:</string>
    <string name="preference_notification_in_call_settings_text">Notification In-Call Settings</string>
    <string name="preference_notification_in_call_sound_enable_title">Enable In-Call Sound</string>
    <string name="preference_notification_in_call_sound_enable_summaryOn">Notifications will play a sound when you are in a phone call.</string>
    <string name="preference_notification_in_call_sound_enable_summaryOff">Notifications will not play a sound when you are in a phone call.</string>
    <string name="preference_notification_in_call_vibrate_enable_title">Enable In-Call Vibrate</string>
    <string name="preference_notification_in_call_vibrate_enable_summaryOn">Notifications will vibrate when you are in a phone call.</string>
    <string name="preference_notification_in_call_vibrate_enable_summaryOff">Notifications will not vibrate when you are in a phone call.</string>
</resources>