<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="preference_screen"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:droidnotify="http://schemas.android.com/apk/res/apps.droidnotify">
    <PreferenceCategory android:title="@string/basic_settings_text" android:key="basic_settings_category">
        <ListPreference android:entries="@array/app_theme_options" android:title="@string/preference_app_theme_title" android:key="app_theme" android:summary="@string/preference_app_theme_summary" android:defaultValue="0" android:entryValues="@array/app_theme_options_values" />
        <CheckBoxPreference android:title="@string/preference_display_seconds_enabled_title" android:key="display_seconds_enabled" android:defaultValue="true" android:summaryOn="@string/preference_display_seconds_enabled_summaryOn" android:summaryOff="@string/preference_display_seconds_enabled_summaryOff" />
        <CheckBoxPreference android:title="@string/preference_blink_colon_enabled_title" android:key="blink_colon_enabled" android:defaultValue="false" android:summaryOn="@string/preference_blink_colon_enabled_summaryOn" android:summaryOff="@string/preference_blink_colon_enabled_summaryOff" />
        <ListPreference android:entries="@array/alarm_max_hours_options" android:title="@string/preference_alarm_max_hours_title" android:key="alarm_max_hours_settings" android:summary="@string/preference_alarm_max_hours_summary" android:defaultValue="48" android:entryValues="@array/alarm_max_hours_options_values" />
        <CheckBoxPreference android:title="@string/preference_landscape_screen_enabled_title" android:key="landscape_screen_enabled" android:defaultValue="false" android:summaryOn="@string/preference_landscape_screen_enabled_summaryOn" android:summaryOff="@string/preference_landscape_screen_enabled_summaryOff" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/alarm_settings_text" android:key="alarm_settings_category">
        <PreferenceScreen android:title="@string/alarm_settings_text" android:key="alarm_settings_screen">
            <ListPreference android:entries="@array/snooze_amount_options" android:title="@string/preference_snooze_amount_title" android:key="snooze_amount" android:summary="@string/preference_snooze_amount_summary" android:defaultValue="10" android:entryValues="@array/snooze_amount_options_values" />
            <CheckBoxPreference android:title="@string/preference_notifications_enabled_title" android:key="status_bar_notifications_enabled" android:defaultValue="true" android:summaryOn="@string/preference_notifications_enabled_summaryOn" android:summaryOff="@string/preference_notifications_enabled_summaryOff" />
            <PreferenceScreen android:title="@string/preference_notification_settings" android:key="notification_settings_screen" android:summary="@string/preference_notification_settings_summary" android:dependency="status_bar_notifications_enabled">
                <PreferenceCategory android:title="@string/preference_notification_sound_settings_text" android:key="notification_sound_settings_category">
                    <RingtonePreference android:title="@string/preference_notification_sound_title" android:key="notification_sound" android:summary="@string/preference_notification_sound_summary" android:defaultValue="content://settings/system/alarm_alert" android:ringtoneType="alarm" android:showDefault="true" android:showSilent="true" />
                </PreferenceCategory>
                <PreferenceCategory android:title="@string/preference_notification_vibrate_settings_text" android:key="notification_vibrate_settings_category">
                    <ListPreference android:entries="@array/vibrate_setting_options" android:title="@string/preference_vibrate_setting_title" android:key="notification_vibrate_setting" android:summary="@string/preference_vibrate_setting_summary" android:defaultValue="0" android:entryValues="@array/vibrate_setting_options_values" />
                    <apps.babycaretimer.preferences.VibratePatternListPreference android:entries="@array/preference_vibrate_pattern_options" android:title="@string/preference_vibrate_pattern_title" android:key="notification_vibrate_pattern" android:summary="@string/preference_vibrate_pattern_summary" android:defaultValue="0,800,200,800,200,800,200" android:entryValues="@array/preference_vibrate_pattern_options_values" />
                </PreferenceCategory>
                <PreferenceCategory android:title="@string/preference_notification_led_settings_text" android:key="notification_led_settings_category">
                    <CheckBoxPreference android:title="@string/preference_led_enabled_title" android:key="notification_led_enabled" android:defaultValue="true" android:summaryOn="@string/preference_led_enabled_summaryOn" android:summaryOff="@string/preference_led_enabled_summaryOff" />
                    <apps.babycaretimer.preferences.LEDColorListPreference android:entries="@array/preference_led_color_options" android:title="@string/preference_led_color_title" android:key="notification_led_color" android:summary="@string/preference_led_color_summary" android:dependency="notification_led_enabled" android:defaultValue="yellow" android:entryValues="@array/preference_led_color_options_values" />
                    <apps.babycaretimer.preferences.LEDPatternListPreference android:entries="@array/preference_led_pattern_options" android:title="@string/preference_led_pattern_title" android:key="notification_led_pattern" android:summary="@string/preference_led_pattern_summary" android:dependency="notification_led_enabled" android:defaultValue="1000,1000" android:entryValues="@array/preference_led_pattern_options_values" />
                </PreferenceCategory>
                <PreferenceCategory android:title="@string/preference_notification_in_call_settings_text" android:key="notification_in_call_settings_category">
                    <CheckBoxPreference android:title="@string/preference_notification_in_call_sound_enable_title" android:key="notification_in_call_sound_enabled" android:defaultValue="false" android:summaryOn="@string/preference_notification_in_call_sound_enable_summaryOn" android:summaryOff="@string/preference_notification_in_call_sound_enable_summaryOff" />
                    <CheckBoxPreference android:title="@string/preference_notification_in_call_vibrate_enable_title" android:key="notification_in_call_vibrate_enabled" android:defaultValue="false" android:summaryOn="@string/preference_notification_in_call_vibrate_enable_summaryOn" android:summaryOff="@string/preference_notification_in_call_vibrate_enable_summaryOff" />
                </PreferenceCategory>
            </PreferenceScreen>
            <PreferenceScreen android:title="@string/preference_screen_settings" android:key="screen_settings_screen">
                <CheckBoxPreference android:title="@string/preference_blur_screen_background_enabled_title" android:key="blur_screen_background_enabled" android:defaultValue="false" android:summaryOn="@string/preference_blur_screen_background_enabled_summaryOn" android:summaryOff="@string/preference_blur_screen_background_enabled_summaryOff" />
                <CheckBoxPreference android:title="@string/preference_dim_screen_background_enabled_title" android:key="dim_screen_background_enabled" android:defaultValue="true" android:summaryOn="@string/preference_dim_screen_background_enabled_summaryOn" android:summaryOff="@string/preference_dim_screen_background_enabled_summaryOff" />
                <ListPreference android:entries="@array/dim_screen_background_amount_options" android:title="@string/preference_dim_screen_background_amount_title" android:key="dim_screen_background_amount_settings" android:summary="@string/preference_dim_screen_background_amount_summary" android:dependency="dim_screen_background_enabled" android:defaultValue="50" android:entryValues="@array/dim_screen_background_amount_options_values" />
                <CheckBoxPreference android:title="@string/preference_screen_enabled_title" android:key="screen_enabled" android:defaultValue="true" android:summaryOn="@string/preference_screen_enabled_summaryOn" android:summaryOff="@string/preference_screen_enabled_summaryOff" />
                <CheckBoxPreference android:title="@string/preference_screen_dim_enabled_title" android:key="screen_dim_enabled" android:dependency="screen_enabled" android:defaultValue="true" android:summaryOn="@string/preference_screen_dim_enabled_summaryOn" android:summaryOff="@string/preference_screen_dim_enabled_summaryOff" />
                <CheckBoxPreference android:title="@string/preference_keyguard_enabled_title" android:key="keyguard_enabled" android:dependency="screen_enabled" android:defaultValue="true" android:summaryOn="@string/preference_keyguard_enabled_summaryOn" android:summaryOff="@string/preference_keyguard_enabled_summaryOff" />
            </PreferenceScreen>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/advanced_settings_text" android:key="advanced_settings_category">
        <PreferenceScreen android:title="@string/advanced_settings_text" android:key="advanced_settings_screen">
            <CheckBoxPreference android:title="@string/preference_haptic_feedback_title" android:key="haptic_feedback_enabled" android:defaultValue="true" android:summaryOn="@string/preference_haptic_feedback_summaryOn" android:summaryOff="@string/preference_haptic_feedback_summaryOff" />
            <CheckBoxPreference android:title="@string/preference_confirm_reset_counters_enabled_title" android:key="confirm_reset_counters_enabled" android:defaultValue="true" android:summaryOn="@string/preference_confirm_reset_counters_enabled_summaryOn" android:summaryOff="@string/preference_confirm_reset_counters_enabled_summaryOff" />
            <ListPreference android:entries="@array/screen_timeout_options" android:title="@string/preference_screen_timeout" android:key="screen_timeout_settings" android:summary="@string/preference_screen_timeout_summary" android:defaultValue="300" android:entryValues="@array/screen_timeout_options_values" />
            <Preference android:title="@string/preference_export_preferences_title" android:key="export_preferences" android:summary="@string/preference_export_preferences_summary" />
            <Preference android:title="@string/preference_import_preferences_title" android:key="import_preferences" android:summary="@string/preference_import_preferences_summary" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/rate_app_text" android:key="rate_app_category">
        <Preference android:title="@string/rate_app_text" android:key="rate_app" android:summary="@string/rate_app_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/feedback_text" android:key="app_feedback_category">
        <Preference android:title="@string/email_developer_text" android:key="email_developer" android:summary="@string/email_developer_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_text" android:key="app_info_category">
        <Preference android:title="@string/about_text" android:key="application_about" android:summary="@string/preference_about_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/license_info" android:key="app_license_category">
        <Preference android:title="@string/license" android:key="application_license" android:summary="@string/app_license" />
    </PreferenceCategory>
</PreferenceScreen>