<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_gravity="center" android:id="@id/previewImageView" android:layout_width="50.0dip" android:layout_height="50.0dip" />
        <LinearLayout android:orientation="horizontal" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/preference_led_color_red" />
            <TextView android:id="@id/redTextView" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <SeekBar android:id="@id/redSeekBar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="255" />
        <LinearLayout android:orientation="horizontal" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/preference_led_color_green" />
            <TextView android:id="@id/greenTextView" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <SeekBar android:id="@id/greenSeekBar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="255" />
        <LinearLayout android:orientation="horizontal" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/preference_led_color_blue" />
            <TextView android:id="@id/blueTextView" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <SeekBar android:id="@id/blueSeekBar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="255" />
    </LinearLayout>
</ScrollView>