<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/alarm_main_linear_layout" android:background="@drawable/background_blue" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Chronometer android:id="@id/masterChronometer" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:textAppearance="@*android:style/TextAppearance.Medium" android:textSize="15.0pt" android:textColor="@color/black" android:gravity="center" android:id="@id/alarm_header_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:text="@string/alarm_text" android:drawablePadding="10.0dip" />
    <ImageView android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:src="@drawable/divider_black" />
    <TextView android:textSize="20.0pt" android:textColor="@color/black" android:gravity="center" android:id="@id/display_alarm_info_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
    <TextView android:textSize="10.0pt" android:textColor="@color/black" android:gravity="center" android:id="@id/display_timer_info_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
    <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/alarm_buttons_linear_layout" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
        <Button android:textColor="@color/black" android:gravity="center" android:id="@id/snooze_button" android:background="@drawable/btn_blue" android:layout_width="120.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/snooze_text" android:layout_weight="1.0" android:hapticFeedbackEnabled="true" />
        <Button android:textColor="@color/black" android:gravity="center" android:id="@id/dismiss_button" android:background="@drawable/btn_blue" android:layout_width="120.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/dismiss_text" android:layout_weight="1.0" android:hapticFeedbackEnabled="true" />
    </LinearLayout>
</LinearLayout>