<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/background_pink" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@*android:style/TextAppearance.Medium" android:textSize="12.0pt" android:textColor="@color/black" android:gravity="center" android:id="@id/set_alarm_header_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:text="@string/set_alarm_text" android:drawablePadding="5.0dip" />
    <ImageView android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:src="@drawable/divider_black" />
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/alarm_buttons_linear_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip">
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/alarm_buttons_linear_layout" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="Hours" />
            <apps.babycaretimer.NumberPicker android:id="@id/hours_number_picker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView android:textSize="20.0pt" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text=":" />
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/alarm_buttons_linear_layout" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="Minutes" />
            <apps.babycaretimer.NumberPicker android:id="@id/minutes_number_picker" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/alarm_recurring_linear_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="@*android:style/TextAppearance.Medium" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/recurring_text" />
        <CheckBox android:id="@id/recurring_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" />
    </LinearLayout>
    <ImageView android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:src="@drawable/divider_black" />
    <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/alarm_buttons_linear_layout" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
        <Button android:textColor="@color/black" android:gravity="center" android:id="@id/set_alarm_button" android:background="@drawable/btn_pink" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/set_alarm_text" android:layout_weight="1.0" android:hapticFeedbackEnabled="true" />
        <Button android:textColor="@color/black" android:gravity="center" android:id="@id/cancel_alarm_button" android:background="@drawable/btn_pink" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/cancel_alarm_text" android:layout_weight="1.0" android:hapticFeedbackEnabled="true" />
        <Button android:textColor="@color/black" android:gravity="center" android:id="@id/cancel_button" android:background="@drawable/btn_pink" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/cancel_text" android:layout_weight="1.0" android:hapticFeedbackEnabled="true" />
    </LinearLayout>
</LinearLayout>